# py-cli-grid

./: .gitignore  README.md  app.py  charachter.py  colors.py  defines.py  frame.py  interface.py  items.py  play.py  pyproject.toml  room.py  sample.py  setup.py  test_EngineClient.py  test_EngineServer.py  ç
.github/: build_and_release.yml
.github/workflows/: python-publish.yml
examples/: sample.py
interfaces/: cli.py
render/: GrassRender.py  SandRender.py  animal_render.py  base_render.py  container_render.py  decoration_render.py  door_render.py  edible_render.py  env_render.py  equipment_render.py  generic_render.py  pj_render.py  play_animations.py  portal_render.py  potion_render.py  render_engine.py  rock_render.py  tittle_render.py  wall_render.py  wood_wall_render.py
samples/: test_EngineClient.py  test_EngineServer.py
samples/cli/: models_attack_east.cli.sample  models_attack_west.cli.sample  models_playback.py  models_run_east.cli.sample  pj_render.py  play.py
samples/cli/render/: base_render.py  play.py
samples/cli_enhanced/: KBHit.py  area_box.py  command_line_box.py  gui_process.py  gui_thread.py  interface.py  loading_box.py  menu_box.py  play.py  sound_manager.py  stats_box.py
samples/cli_enhanced/cli_grid/: area_box.py  command_line_box.py  loading_box.py  menu_box.py  stats_box.py
samples/cli_enhanced/gui/: base_game_process.py  game_process.py  gui_process.py  sound_process.py
samples/cli_enhanced/render/: animal_render.py  (+15 more)
samples/cli_simple/: cli.py  colors.py  play.py
src/: command_line_box  py_cli_grid.py
tests/: run.py
(+29 files in other folders)
