[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "py-cli-grid"
dynamic = ["version"]
authors = [
  { name="Carlos G. Martín Pérez", email="cagrmape@gmail.com" },
]
description="Package to manage CLI as a grid"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Carlosmape/py-cli-grid"
Issues = "https://github.com/Carlosmape/py-cli-grid/issues"

[tool.setuptools_scm]
# Version format when not on a tag: {tag}.dev{distance}+g{commit}
version_scheme = "post-release"
local_scheme = "no-local-version"

